--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 PORT=1000
-GOOGLE_CLIENT_ID=1045872054833-c9oudamnb265us8jp4slnl8c5gbfae8r.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=UuJTiDEx8x5bhlK2nKoWVe7F
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
 DB_HOST='127.0.0.1'
 DB_PORT='27017'
-DB_DATABASE='tony'
-DB_USERNAME='fathoni1337'
-DB_PASSWORD='anakbaik'
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
